fixed dark theme issue on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,10 @@
   --foreground: #171717;
 }
 
+html {
+color-scheme: light;
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -20,7 +24,8 @@
 }
 
 body {
-
-  background-color: white;
-  color: black;
+  background: var(--background);
+  color: var(--foreground);
+  font-family: Arial, Helvetica, sans-serif;
+  
 }
